--- a/styles/css/style.scss
+++ b/styles/css/style.scss
@@ -1,6 +1,8 @@
 #home{
     display: flex;
     flex-direction: column;
+    background-image: url(../image/logo.jpg);
+    background-repeat: round;
 }
 #homeTitle{
     display: flex;
@@ -10,11 +12,26 @@
 }
 
 h1{
-    size: 200px;
+    size: 400px;
     color:red;
+}
+
+p{
+    color: white;
+    size: 200px;
 }
 
 footer{
     border: 1px solid black;
     background-color: rgb(224, 219, 219);
+}
+table,
+td {
+    border: 1px solid #333;
+}
+
+thead,
+tfoot {
+    background-color: #333;
+    color: #fff;
 }
