--- a/template/loginPage.phtml
+++ b/template/loginPage.phtml
@@ -1,19 +1,21 @@
-<div>
-  <form method="POST">
-    <div>
-      <label for="email"></label>
-      <input type="text" name="email" placeholder="Votre adresse e-mail" />
+ <h3>Connexion </h3>
 
-      <label for="password"></label>
-      <input type="password" name="password" placeholder="Votre mot de passe" />
-    </div>
+ <div>
+   <form method="POST">
+     <div>
+       <label for="email"></label>
+       <input type="text" name="email" placeholder="Votre adresse e-mail" />
 
-    <div>
-      <input type="submit" value="Se connecter" />
-    </div>
-  </form>
+       <label for="password"></label>
+       <input type="password" name="password" placeholder="Votre mot de passe" />
+     </div>
 
-  <div>
-    <a href="?page=register">s'inscrire</a>
-  </div>
-</div>
+     <div>
+       <input type="submit" value="Se connecter" />
+     </div>
+   </form>
+
+   <div>
+     vous n'avez pas encore de compte ? <a href="?page=register">s'inscrire</a>
+   </div>
+ </div>
