--- a/template/gamePage.phtml
+++ b/template/gamePage.phtml
@@ -1,3 +1,17 @@
+<div class="carousel">
+  <div class="slides">
+    <img src="../styles/image/link.jpg" alt="slide image" class="slide">
+    <img src="../styles/image/ff6.jpg" alt="slide image" class="slide">
+    <img src="../styles/image/tourbillon.jpg" alt="slide image" class="slide">
+    <img src="../styles/image/bouclier.jpg" alt="slide image" class="slide">
+
+  </div>
+  <div class="controls">
+    <div class="control prev-slide">&#9668;</div>
+    <div class="control next-slide">&#9658;</div>
+  </div>
+</div>
+
 <h3><?= $Game->getGameName() ?></h3>
 
 <ul>
@@ -20,31 +34,23 @@
 </form>
 
 <table>
+
     <thead>
         <tr>
             <th colspan="2">Comentaires des utilisateurs</th>
         </tr>
     </thead>
+
     <tbody>
 
         <?php
-         
-         foreach ($tabComment as $com) : ?>
+        foreach ($rawData as $data) : ?>
             <tr>
-                <td><?= htmlentities($com->getComment()) ?></td>
-                <td><?= htmlentities($com->getUserName()) ?></td>
-
+                <td><?= htmlentities($data['comment']) ?></td>
+                <td><?= htmlentities($data['lastName']) ?></td>
             </tr>
-
         <?php endforeach; ?>
 
-
-
-
-
     </tbody>
+
 </table>
-
-
-
-<!-- on boucle ds la able des commentaire pour faire resortir tous les comme  -->
