--- a/template/homePage.phtml
+++ b/template/homePage.phtml
@@ -1,25 +1,17 @@
 <div id="home">
 
-
     <div id="homeTitle" >
-        <h1> GameGate</h1>
+        <h1> GameGate </h1>
     </div>
 
-    
-
-
-    <div id="" >
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus neque dolore, voluptate quis fugit assumenda recusandae ullam. Voluptates repellat incidunt quos rerum quod, at doloremque accusamus nesciunt molestias. Suscipit, aliquid!
-            Ea deserunt, magni natus ratione, vitae quas velit non blanditiis, laboriosam atque laborum praesentium. Nihil doloribus quis eius perferendis temporibus voluptate. Cumque, dolorem. Dicta ut deserunt suscipit neque, rem placeat.
-            Maiores id laborum rerum, accusamus fuga aliquam quos ullam tempore ipsum iste odio consequuntur, dicta blanditiis rem itaque animi ipsam, ex deleniti magni eveniet voluptatibus vero at aperiam soluta? Est.
-            Nemo corrupti amet sint. Nam perspiciatis ab iusto, officia blanditiis vitae nisi incidunt vero. Qui porro molestias inventore a laborum consequuntur sunt necessitatibus, quae repellendus et ipsam, cum error cumque!
-            Voluptatibus facilis incidunt ex! Unde odit aspernatur, architecto hic eligendi recusandae iure? Quia excepturi minima, sunt error unde tempore ipsam voluptatum molestiae voluptates fugiat nihil repellat incidunt pariatur nemo dignissimos.
-            Explicabo ut qui cumque possimus consequuntur libero, dolorem vero voluptatum officia vel minima nisi quisquam labore, debitis provident cupiditate quam alias atque. Ipsa eum ut error, tempora veritatis minima sequi.
-            Voluptate, ratione corporis placeat, magni asperiores porro rem fuga sint perferendis voluptatem numquam omnis dolorem ipsam laborum recusandae cum beatae sequi accusantium nam mollitia eligendi deserunt. Blanditiis dicta animi minima?
-            Ad, eos debitis ex maxime magnam non odit et sint recusandae deserunt, accusamus magni architecto voluptatum totam atque facilis praesentium provident doloribus, quo rem. Accusantium earum ea rem iusto voluptates.
-            Delectus exercitationem eum accusamus expedita provident, quae nihil deleniti eveniet ullam accusantium quod inventore a esse, maxime necessitatibus adipisci vel dolore quibusdam nobis enim debitis facilis obcaecati. Autem, quisquam veniam?
-            Ipsa ea nostrum numquam est temporibus? Excepturi corrupti itaque aliquid amet nobis quam quo maxime nihil reiciendis, dolore blanditiis iste labore accusantium, dicta libero accusamus doloremque! Rem doloribus excepturi perferendis?
+    <div class ="hometext" >
+        <p class ="hometext">
+            Bienvenue sur GameGate le portail de jeu des développeurs indépendants. <br>
+            Si vous êtes un développeur, vous pouvez laisser un lien vers votre jeu, et ainsi en faire profiter la communauté. 
+            Le but est de vous permettre d'avoir le retour direct des joueurs pendant la phase de développement. <br>
+            Ce qui vous permettra de pouvoir être réactif. L'entraide est le maître mot, ici on ne juge pas, 
+            on conseille, on aide et on permet aux développeurs et aux joueurs de faire ensemble le meilleur jeu possible. 
         </p>
     </div>
+
 </div>
