--- a/template/loginPage.phtml
+++ b/template/loginPage.phtml
@@ -1,21 +1,16 @@
  <h3>Connexion </h3>
 
- <div>
-   <form method="POST">
-     <div>
-       <label for="email"></label>
-       <input type="text" name="email" placeholder="Votre adresse e-mail" />
 
-       <label for="password"></label>
-       <input type="password" name="password" placeholder="Votre mot de passe" />
-     </div>
-
-     <div>
-       <input type="submit" value="Se connecter" />
-     </div>
-   </form>
-
-   <div>
+ <div class="login">
+  <div class="form">
+    <form class="login-form" method="POST">
+      <input type="text" name="email" placeholder="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required/>
+      <input type="password" name="password" placeholder="Votre mot de passe" required />
+      <button type="submit" >Se connecter</button>
+    </form> 
+    <div>
      vous n'avez pas encore de compte ? <a href="?page=register">s'inscrire</a>
    </div>
- </div>
+
+  </div>
+</div>
