--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/feuilles css/rester.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../styles/css/style.css">
 
     <title>Game.Gate</title>
@@ -37,6 +37,8 @@
                         <?php endif; ?>
 
 
+
+
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="?page=userPage&id=<?= $_SESSION['user_id'] ?>"><?= htmlentities($_SESSION['user_Name']) ?></a>
                         </li>
@@ -48,16 +50,68 @@
                 </ul>
             </div>
         </nav>
+        <br>
     </header>
 
     <main>
         <?php require $template; ?>
     </main>
 
-    <footer>
-        $footer
-        copyright exclusif
+    <!-- <footer>
+        <div id=footcontainer>
+            <div id=footcontact>
+                <h2>Coordonnée</h2>
+                <p>1 route du cheval blanc</p><br>
+                <p>33000 Bordeaux</p><br>
+            </div>
+
+            <div id=footlogo>
+                <span>
+                    <img src="../styles/image/GameGate2.png" alt="logo">
+                </span>
+            </div>
+
+            <div id=footnavigation>
+                <h2>Navigation</h2>
+            </div>
+        </div> -->
+
+
+    <!-- </footer> -->
+
+    <!-- **************************************** -->
+
+    <footer class="section bg-footer">
+        <div class="container">
+            <div>
+                <h6 class="footer-heading text-uppercase text-orange">Informations</h6>
+                <ul class="footer-link mt-4">
+                    <li> <p>plan du site</p> </li>
+                    <li> <p>Nos équipes</p> </li>
+                    <li> <p>conditions d'utilisation</p> </li>
+                </ul>
+            </div>
+
+            <div id=footlogo>
+                <span>
+                    <img src="../styles/image/GameGate2.svg" alt="logo">
+                </span>
+            </div>
+
+
+            <div class="footer-link">
+                <h6 class="footer-heading text-uppercase text-orange">Nous contacter</h6>
+                <p class="contact-info mt-4">Besoin d'aide ?</p>
+                <p class="contact-info">+336 111-121-314</p>
+:            </div>
+        </div>
+        <div class="text-center mt-5">
+            <p class="footer-alt">2022 © Society, All Rights Reserved</p>
+        </div>
     </footer>
+
+    <script type="module" src="./main.js"></script>
+
 </body>
 
 </html>
