--- a/template/homePage.phtml
+++ b/template/homePage.phtml
@@ -1,16 +1,17 @@
 <div id="home">
 
-    <div id="homeTitle" >
+
+    <div id="homeTitle">
         <h1> GameGate </h1>
     </div>
 
-    <div class ="hometext" >
-        <p class ="hometext">
-            Bienvenue sur GameGate le portail de jeu des développeurs indépendants. <br>
-            Si vous êtes un développeur, vous pouvez laisser un lien vers votre jeu, et ainsi en faire profiter la communauté. 
-            Le but est de vous permettre d'avoir le retour direct des joueurs pendant la phase de développement. <br>
-            Ce qui vous permettra de pouvoir être réactif. L'entraide est le maître mot, ici on ne juge pas, 
-            on conseille, on aide et on permet aux développeurs et aux joueurs de faire ensemble le meilleur jeu possible. 
+    <div class="hometext">
+        <p class="hometext">
+            Bienvenue sur GameGate le portail de jeu des développeurs indépendants.
+            Si vous êtes un développeur, vous pouvez laisser un lien vers votre jeu, et ainsi en faire profiter la communauté.
+            Le but est de vous permettre d'avoir le retour direct des joueurs pendant la phase de développement
+            ce qui vous permettra d'être plus réactif. L'entraide est le maître mot. Ici, on ne juge pas,
+            on conseille, on aide et on permet aux développeurs et aux joueurs de faire ensemble le meilleur jeu possible.
         </p>
     </div>
 
