--- a/styles/css/style.scss
+++ b/styles/css/style.scss
@@ -1,77 +1,36 @@
 // *****************************************************HTML *********************************************************************
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+
+.Comfortaa {
+  font-family: 'comfortaa';
+}
+
+
 
 body {
 
-  background: rgb(13,110,253);
-  background: linear-gradient(5deg, rgba(13,110,253,1) 13%, rgba(15,99,224,1) 30%, rgba(24,40,72,1) 61%);   
+  background: rgb(13, 110, 253);
+  background: linear-gradient(5deg, rgba(13, 110, 253, 1) 13%, rgba(15, 99, 224, 1) 30%, rgba(24, 40, 72, 1) 61%);
+}
+
+.userPage {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.adminPage{
+  display: flex;
+justify-content: center;
+
+}
+
+.white-link {
+  text-decoration: none;
+  color: white;
 }
 
 
-// ***************************************************** carousel ****************************************************
-$carousel-height: 250px;
-$control-size: 50px;
-
-
-.carousel {
-  width: 80vw;
-  height: $carousel-height;
-  border-radius: 3px;
-  overflow: hidden;
-  position: relative;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-
-  &:hover .controls {
-    opacity: 1;
-  }
-
-  .controls {
-    opacity: 0;
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    justify-content: space-between;
-    width: 100%;
-    z-index: 99999;
-    transition: all ease 0.5s;
-
-    .control {
-      margin: 0 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 40px;
-      width: 40px;
-      border-radius: 50%;
-      background-color: rgba(255, 255, 255, 0.7);
-      opacity: .5;
-      transition: ease .3s;
-      cursor: pointer;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
-
-  .slides {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    display: flex;
-    width: 100%;
-    transition: 1s ease-in-out all;
-    object-fit: cover;
-
-
-    .slide {
-      min-width: 100%;
-      min-height: $carousel-height;
-      height: auto;
-    }
-  }
-}
 
 
 #home {
@@ -79,11 +38,9 @@ $control-size: 50px;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  // background-image: url(../image/logo.jpg);
-  
+
   background-size: 100%;
   background-position: center;
-  // background-color: black;
   background-repeat: no-repeat;
   align-items: center;
   gap: 30px;
@@ -93,29 +50,45 @@ $control-size: 50px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  // align-items: center;
   justify-content: center;
   padding-left: 0px;
   margin-right: 91px;
 }
 
-.hometext p  {
+// ******************************************************* homePage *********************************
+
+.hometext {
+  display: flex;
+  justify-content: center;
+}
+
+.hometext p {
   color: #FFFFFF;
 
   width: 74%;
   text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF,
-   0 0 20px #181cff, 0 0 30px #F7F9F9, 0 0 40px #4018FF, 0 0 55px #1F18FF, 0 0 75px #ff18e6;
+    0 0 20px #181cff, 0 0 30px #F7F9F9, 0 0 40px #4018FF, 0 0 55px #1F18FF, 0 0 75px #ff18e6;
+
+}
+
+.lightWord, .texte-404 {
+  font-family: 'Comfortaa', cursive;
+
+  text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF,
+    0 0 20px #181cff, 0 0 30px #F7F9F9, 0 0 40px #4018FF, 0 0 55px #1F18FF, 0 0 75px #ff18e6;
+
 
 }
 
 
-
 h1 {
   color: #FFFFFF;
+  font-size: 80px;
+  font-family: 'Comfortaa', cursive;
 
   width: 74%;
   text-shadow: 0 0 5px #FFF, 0 0 10px #FFF, 0 0 15px #FFF,
-   0 0 20px #181cff, 0 0 30px #F7F9F9, 0 0 40px #4018FF, 0 0 55px #1F18FF, 0 0 75px #ff18e6;
+    0 0 20px #181cff, 0 0 30px #F7F9F9, 0 0 40px #4018FF, 0 0 55px #1F18FF, 0 0 75px #ff18e6;
 
 }
 
@@ -125,20 +98,17 @@ header {
   height: 56px;
 }
 
-h1 {
-  font-size: 80px;
-  color: white;
-}
 
 p {
   color: white;
   size: 200px;
+  font-family: 'Comfortaa', cursive;
+
 }
 
 footer {
   height: 420px;
   border: 1px solid black;
-  // background-color: #0d6efd;
 }
 
 table,
@@ -152,15 +122,15 @@ tfoot {
   color: #fff;
 }
 
-h3{
+h3 {
   display: flex;
-flex-direction: row;
-justify-content: center;
-font-size: xx-large;
-margin-bottom: 0rem;
-margin-top: 0px;
-padding-top: 11px;
-color: white;
+  flex-direction: row;
+  justify-content: center;
+  font-size: xx-large;
+  margin-bottom: 0rem;
+  margin-top: 0px;
+  padding-top: 11px;
+  color: white;
 }
 
 
@@ -174,27 +144,14 @@ color: white;
   flex-wrap: wrap;
   background: rgb(7, 77, 80);
   background: linear-gradient(297deg, rgba(7, 77, 80, 1) 0%, rgba(14, 101, 228, 1) 52%);
-  // flex: 1 3;
 }
-
-// #footcontainer h2{
-//   color: white;
-// }
-
-
-
-// #footlogo {
-//   height: 300px;
-//   width: 250px;
-//   margin-left: 50px;
-//   margin-top: 5px;
-// }
 
 #footlogo>span>img {
   width: 250px;
   height: 300px;
   object-fit: cover;
 }
+
 //  ******************************************************** footer **********************************************************
 
 .container {
@@ -211,7 +168,7 @@ h6 {
   font-size: 1rem;
 }
 
-.text-white {
+.text-white, .texte-404 {
   color: #fff;
 }
 
@@ -236,10 +193,12 @@ h6 {
 
 // ************************************************************* login *********************************************************
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 
-  
-  .login {
+
+.login,
+.addGame,
+.userPage,
+.upDatePage {
   width: 360px;
   padding: 8% 0 0;
   margin: auto;
@@ -297,4 +256,218 @@ h6 {
 .form span {
   font-size: 75px;
   color: #4b6cb7;
+}
+
+
+// ************************************************************** GamePage *******************************************************************
+
+.userTbl {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: white;
+}
+
+// ***************************************************** carousel ****************************************************
+.gamePageContainer {
+
+
+
+  .carouselContainer {
+
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+
+    $carousel-height: 250px;
+    $control-size: 50px;
+
+
+
+
+    .carousel {
+      display: flex;
+      justify-content: center;
+      width: 80vw;
+      height: $carousel-height;
+      border-radius: 3px;
+      overflow: hidden;
+      position: relative;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+
+      &:hover .controls {
+        opacity: 1;
+      }
+
+      .controls {
+        opacity: 0;
+        display: flex;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        justify-content: space-between;
+        width: 100%;
+        z-index: 99999;
+        transition: all ease 0.5s;
+
+        .control {
+          margin: 0 5px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 40px;
+          width: 40px;
+          border-radius: 50%;
+          background-color: rgba(255, 255, 255, 0.7);
+          opacity: .5;
+          transition: ease .3s;
+          cursor: pointer;
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+      }
+
+      .slides {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        display: flex;
+        width: 100%;
+        transition: 1s ease-in-out all;
+        object-fit: cover;
+
+
+        .slide {
+          min-width: 100%;
+          min-height: $carousel-height;
+          height: auto;
+        }
+
+        .slide {
+          width: 890px;
+          height: 250px;
+          // height: auto;
+          object-fit: cover;
+
+        }
+
+      }
+    }
+  }
+
+// ********************************************************* note **********************************************************************
+  .noteContainer {
+
+    h3 {
+      font-size: 70px;
+      color: orange;
+    }
+
+
+    .note1,
+    .note2 {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .note1 p {
+      text-align: center;
+      font-family: 'Comfortaa', cursive;
+
+    }
+
+    .note2 p {
+      width: 80%;
+      font-family: 'Comfortaa', cursive;
+
+    }
+
+
+
+
+
+  }
+
+  .bouton {
+    margin-left: 710px;
+
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+
+  .bouton:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+
+  .bouton a {
+    color: orange;
+  }
+
+  .commentContainer {
+    margin-top: 50px;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .commentForm {
+      margin-bottom: 30px;
+    }
+
+  }
+
+  table
+   {
+    background-color: white;
+  }
+
+
+
+}
+
+.page-404{
+  height: 500px;
+  h1{
+    text-align: -moz-left;
+    display: flex;
+    justify-content: center;
+    margin-left: 157px;
+    margin-top: 98px;
+  }
+
+  a{
+    color: purple;
+  }
+  
+  .container404, .texte-404{
+    display: flex;
+    justify-content: center;
+  }
+
+  .title-404{
+    text-align: center;
+  }
+
 }
