--- a/template/gameAddPage.phtml
+++ b/template/gameAddPage.phtml
@@ -1,8 +1,15 @@
-<form action="" method="POST">
-    <input type="text" name="gameName" placeholder="Nom de votre jeu">
-    <input type="text" name="link" placeholder="Lien du jeu " placeholder="Coller le lien du jeu">
-    <input type="textarea" name='content' placeholder="Quelques mots à porpos de votre jeu " >
-    <input type="text" name="category" placeholder="Genre de votre jeu " >
-    <input type="submit" value='Enregister le jeu ' >
+<h3 class="lightWord">Ajouter votre jeu</h3>
 
-</form>
+<div class="addGame">
+
+    <div class="form">
+        <form class="addGameForm-form" method="POST">
+            <input type="text" name="gameName" placeholder="Nom du jeu">
+            <input type="text" name="link" placeholder="Lien du jeu " placeholder="Coller le lien du jeu">
+            <input type="textarea" name='content' placeholder="Description du jeu ">
+            <input type="text" name="category" placeholder="Genre ">
+            <button type="submit">Enregistrer </button>
+        </form>
+
+    </div>
+</div>
