--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="?page=homepage">HomePage</a>
+                        <a class="nav-link active" aria-current="page" href="?page=homePage">HomePage</a>
                     </li>
                     <?php if (!isset($_SESSION['user_id'])) : ?>
                         <li class="nav-item">
@@ -54,41 +54,25 @@
     </header>
 
     <main>
+
         <?php require $template; ?>
     </main>
 
-    <!-- <footer>
-        <div id=footcontainer>
-            <div id=footcontact>
-                <h2>Coordonnée</h2>
-                <p>1 route du cheval blanc</p><br>
-                <p>33000 Bordeaux</p><br>
-            </div>
-
-            <div id=footlogo>
-                <span>
-                    <img src="../styles/image/GameGate2.png" alt="logo">
-                </span>
-            </div>
-
-            <div id=footnavigation>
-                <h2>Navigation</h2>
-            </div>
-        </div> -->
-
-
-    <!-- </footer> -->
-
-    <!-- **************************************** -->
 
     <footer class="section bg-footer">
         <div class="container">
             <div>
                 <h6 class="footer-heading text-uppercase text-orange">Informations</h6>
                 <ul class="footer-link mt-4">
-                    <li> <p>plan du site</p> </li>
-                    <li> <p>Nos équipes</p> </li>
-                    <li> <p>conditions d'utilisation</p> </li>
+                    <li>
+                        <p>Plan du site</p>
+                    </li>
+                    <li>
+                        <p>Nos équipes</p>
+                    </li>
+                    <li>
+                        <p>Conditions d'utilisation</p>
+                    </li>
                 </ul>
             </div>
 
@@ -103,10 +87,11 @@
                 <h6 class="footer-heading text-uppercase text-orange">Nous contacter</h6>
                 <p class="contact-info mt-4">Besoin d'aide ?</p>
                 <p class="contact-info">+336 111-121-314</p>
-:            </div>
+                :
+            </div>
         </div>
         <div class="text-center mt-5">
-            <p class="footer-alt">2022 © Society, All Rights Reserved</p>
+            <p class="footer-alt">2022 GameGate© Society, All Rights Reserved</p>
         </div>
     </footer>
 
